--- a/01-WEBSTANDARD/index.html
+++ b/01-WEBSTANDARD/index.html
@@ -130,7 +130,7 @@
             <div id="cont_tit">
                 <div class="container">
                     <div class="tit">
-                        <h2>All-menu</h2>
+                        <h2>전체메뉴</h2>
                         <a href="#" class="btn"><span class="ir_pm">전체메뉴</span></a>
                     </div>
                 </div>
