--- a/02-RESPONSIVE/layout01.html
+++ b/02-RESPONSIVE/layout01.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>layout01</title>
+    <title>Layout</title>
     <style>
         /* 기본태그이기 때문에 그냥 작성 */
         /* ie8 버전 이하는 호환x */
