--- a/02-RESPONSIVE/index.html
+++ b/02-RESPONSIVE/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width"> <!-- 화면 비율에 맞춰 화면에 출력 -->
     <meta name="author" content="webstoryboy">
     <meta name="description" content="반응형 사이트 따라하기">
     <meta name="keywords" content="반응형사이트, 웹퍼블리셔, 웹접근성, HTML5, webstoryboy, webs">
@@ -10,6 +11,7 @@
     <!-- style -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/font-awesome.css">
     
     <!-- Facebook meta tags -->
@@ -190,19 +192,59 @@
                     </article>
                     <!-- //col1 -->
                     <article class="column col2">
-                        <h4 class="col_tit">Title</h4>
-                        <p class="col_desc">이 곳은 설명 부분입니다.</p>
-                        <!-- -->
-
-                        <!-- // -->
+                        <h4 class="col_tit">Notice</h4>
+                        <p class="col_desc">게시판 영역의 한줄 효과와 두줄 효과 게시판입니다.</p>
+                        <!-- 게시판 -->
+                        <div class="notice1">
+                            <h5>notice1</h5>
+                            <ul>
+                                <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                                <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                                <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                                <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                            </ul>
+                            <a href="#" class="more" title="더 보기">More<i class="fa fa-plus-circle" aria-hidden="true"></i></a>
+                        </div>
+                        <!-- //게시판 -->
+                        <!-- 게시판2 -->
+                        <div class="notice2 mt15">
+                            <h5>notice2</h5>
+                            <ul>
+                                <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                                <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                                <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                                <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                            </ul>
+                            <a href="#" class="more" title="더 보기">More<i class="fa fa-plus-circle" aria-hidden="true"></i></a>
+                        </div>
+                        <!-- //게시판2 -->
                     </article>
                     <!-- //col -->
                     <article class="column col3">
-                        <h4 class="col_tit">Title</h4>
-                        <p class="col_desc">이 곳은 설명 부분입니다.</p>
-                        <!-- -->
-
-                        <!-- // -->
+                        <h4 class="col_tit">Blog</h4>
+                        <p class="col_desc">해상도에 따라 이미지를 다르게 표현하는 방법</p>
+                        <!-- blog1-->
+                        <div class="blog1">
+                            <h5 class="ir_su">image1</h5>
+                            <figure> <!-- img -->
+                                <!-- 호환성 -->
+                                <!-- <img src="img/blog1_@1.jpg" class="img-normal" alt="normal image">
+                                <img src="img/blog1_@2.jpg" class="img-retina" alt="retina image" width="100%"> -->
+                                <img src="img/blog3_@1.jpg" srcset="img/blog3_@1.jpg 1x, img/blog3_@2.jpg 2x, img/blog3_@3.jpg 3x" alt="이미지">
+                                <figcaption>반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다.</figcaption> <!-- 설명 -->
+                            </figure>
+                        </div>
+                        <!-- //blog1 -->
+                        <!-- blog2-->
+                        <div class="blog2">
+                            <h5 class="ir_su">image2</h5>
+                            <figure>
+                                <!-- srcset = html5.1 -->
+                                <img src="img/blog2_@1.jpg" srcset="img/blog2_@1.jpg 1x, img/blog2_@2.jpg 2x" alt="normal image">
+                                <figcaption>반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다.</figcaption>
+                            </figure>
+                        </div>
+                        <!-- //blog2 -->
                     </article> <!-- 왼 -->
                     <!-- //col3 -->
                 </section>
