--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
                 </div>
             
-                <div class="btm">
+                <div class="btm clear">
                     <article class="event">
                         <h3>이벤트</h3>
                         <img src="img/img_banner.jpg" alt="">
@@ -194,6 +194,64 @@
                                 </div>
                             </div>
                     </article>        
+                </div>
+            </div>
+        </section>
+        
+        <section class="fav_info block">
+            <div class="clear">
+                <div class="tit">
+                    <h2>관심정보</h2>
+                </div>
+                <div class="left">
+                    <a href="#">시니어플러스 <span>PICK!</span></a>
+                    <div class="thoumb">
+                        <a href=""></a>
+                        <img src="img/img_thumb.jpg" alt="">
+                        <p>여가정보</p>
+                        <span>여행하기 딱 좋은 계절, 가을</span>
+                    </div>
+                </div>
+                <div class="right">
+                   <ul class="tab_type1">
+                       <li><a href=""><i class="xi-medicine"></i>건강</a></li> 
+                       <li><a href=""><i class="xi-piggy-bank"></i>재테크</a></li>
+                       <li><a href=""><i class="xi-alarm-o"></i>생활</a></li> 
+                       <li><a href=""><i class="xi-glass"></i>여가</a></li>
+                       <li><a href=""><i class="xi-toilet"></i>사람</a></li>
+                   </ul>
+                   <ul class="info_list">
+                       <li>
+                           <a href="">
+                               <strong>생활정보</strong> <!-- 카테고리 분류 -->
+                               제철에 먹는 음식이, 좋다.
+                           </a>
+                       </li>
+                       <li>
+                           <a href="">
+                               <strong>생활정보</strong> <!-- 카테고리 분류 -->
+                               제철에 먹는 음식이, 좋다.
+                           </a>
+                       </li>
+                       <li>
+                           <a href="">
+                               <strong>생활정보</strong> <!-- 카테고리 분류 -->
+                               제철에 먹는 음식이, 좋다.
+                           </a>
+                       </li>
+                       <li>
+                           <a href="">
+                               <strong>생활정보</strong> <!-- 카테고리 분류 -->
+                               제철에 먹는 음식이, 좋다.
+                           </a>
+                       </li>
+                       <li>
+                           <a href="">
+                               <strong>생활정보</strong> <!-- 카테고리 분류 -->
+                               제철에 먹는 음식이, 좋다.
+                           </a>
+                       </li>
+                   </ul>
                 </div>
             </div>
         </section>
