--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>우리은행 시니어플러스</title>
     
-    <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/index.css">
     
@@ -252,6 +253,64 @@
                            </a>
                        </li>
                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="education block">
+            <div class="clear">
+                <div class="tit">
+                    <h2>교육/세미나</h2>
+                    <p>직접 참여할 수 있는 다양한 교육 프로그램과 고품격 동영상 강의를 경험해 보세요!</p>
+                </div>
+                <div>
+                    <div class="left">
+                        <h3>시니어플러스 센터 <span>무료대관</span> 예약</h3>
+                        <a href="#">
+                            <strong>시니어플러스에서 제공하는 무료대관 서비스</strong>
+                            <p>
+                                시니어플러스센터 명동점과 신촌점에서 시니어분들을 위한 강의장, 모임공간을 무료로 대관해 드립니다.
+                            </p>
+                            <span>예약하기</span> 
+                            <!-- a안에 a태그 작성은 문법 오류 -->
+                            <!-- a안에 button (X) -->
+                        </a>
+                    </div>
+                    <div class="right">
+                        <div>
+                           <h3><span>오프라인</span> 세미나 및 특강</h3>
+                           <div>
+                               <div>
+                                   <img src="img/ethumb1.png" alt="부동산투자 최신 트렌드 2020부동산시장 전망 / 날짜 2019.11.14">
+                                   <button>관심추가</button>
+                                   <button>신청하기</button>
+                               </div>
+                               <div>
+                                   <a href="">우리자산관리학교 &lt;부동산투자&gt;</a>
+                                   <ul> <!-- 정보성 -->
+                                       <li><strong>기간</strong>2019.11.14 ~ 11.14</li>
+                                       <li><strong>시간</strong>14:00 ~ 16:00</li>
+                                       <li><strong>인원</strong>20</li>
+                                   </ul>
+                               </div>
+                           </div>
+                           <a href="#">자세히 보기</a>
+                        </div>
+                        <div>
+                            <h3><span>온라인</span> 세미나 및 특강</h3>
+                            <div>
+                               <div>
+                                   <img src="img/ethumb2.png" alt="행복한 삶에는 와인이 필요하다.">
+                                   <button>관심추가</button>
+                                   <button>시청하기</button>
+                               </div>
+                               <div>
+                                   <a href="">와인보다 맛있는 와인 이야기</a>
+                                   <p>국가대표 1호 소믈리에와 함께 하는 '대화의 술' 와인 이야기 - 강사 : 정무민</p> <!-- 문단 -->
+                               </div>
+                           </div>
+                           <a href="#">자세히 보기</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
