--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                         <div class="card_info">
                                             <div class="card">
                                                 <img src="img/img_card.png" alt="">
-                                                <div>
+                                                <div class="btn_func">
                                                     <button>
                                                         <i class="xi-heart"></i>
                                                         관심추가
@@ -262,7 +262,7 @@
                     <h2>교육/세미나</h2>
                     <p>직접 참여할 수 있는 다양한 교육 프로그램과 고품격 동영상 강의를 경험해 보세요!</p>
                 </div>
-                <div>
+                <div class="edu_wrap">
                     <div class="left">
                         <h3>시니어플러스 센터 <span>무료대관</span> 예약</h3>
                         <a href="#">
@@ -278,14 +278,22 @@
                     <div class="right">
                         <div>
                            <h3><span>오프라인</span> 세미나 및 특강</h3>
-                           <div>
-                               <div>
+                           <div class="info_wrap">
+                               <div class="img">
                                    <img src="img/ethumb1.png" alt="부동산투자 최신 트렌드 2020부동산시장 전망 / 날짜 2019.11.14">
-                                   <button>관심추가</button>
-                                   <button>신청하기</button>
+                                   <div class="btn_func">
+                                        <button>
+                                           <i class="xi-heart"></i>
+                                        관심추가
+                                        </button>
+                                        <button>
+                                           <i class="xi-pen"></i>
+                                        신청하기
+                                        </button>
+                                   </div>
                                </div>
-                               <div>
-                                   <a href="">우리자산관리학교 &lt;부동산투자&gt;</a>
+                               <div class="info">
+                                   <a href="">우리자산관리학교 &lt;부동산투자를 하세요&gt;</a>
                                    <ul> <!-- 정보성 -->
                                        <li><strong>기간</strong>2019.11.14 ~ 11.14</li>
                                        <li><strong>시간</strong>14:00 ~ 16:00</li>
@@ -293,22 +301,34 @@
                                    </ul>
                                </div>
                            </div>
-                           <a href="#">자세히 보기</a>
+                            <a href="#" class="btn_more">자세히 보기
+                                <i class="xi-angle-right-thin"></i>
+                            </a>
                         </div>
                         <div>
                             <h3><span>온라인</span> 세미나 및 특강</h3>
-                            <div>
-                               <div>
+                            <div class="info_wrap">
+                               <div class="img">
                                    <img src="img/ethumb2.png" alt="행복한 삶에는 와인이 필요하다.">
-                                   <button>관심추가</button>
-                                   <button>시청하기</button>
+                                   <div class="btn_func">
+                                        <button>
+                                            <i class="xi-heart"></i>
+                                        관심추가
+                                        </button>
+                                        <button>
+                                            <i class="xi-pen"></i>
+                                        시청하기
+                                        </button>
+                                   </div>
                                </div>
-                               <div>
-                                   <a href="">와인보다 맛있는 와인 이야기</a>
+                               <div class="info">
+                                   <a href="">와인보다 맛있는 와인 이야기입니다.</a>
                                    <p>국가대표 1호 소믈리에와 함께 하는 '대화의 술' 와인 이야기 - 강사 : 정무민</p> <!-- 문단 -->
                                </div>
                            </div>
-                           <a href="#">자세히 보기</a>
+                            <a href="#" class="btn_more">자세히 보기
+                               <i class="xi-angle-right-thin"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
